Introduction to cronjobs/pokemon_log.txt
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
  File "/home/rehan/pokemon_project/pokemon_project/spiders/pokemon_db.py", line 56
    .
    ^
SyntaxError: invalid syntax
